Added Research section

--- a/apps.html
+++ b/apps.html
@@ -58,7 +58,7 @@
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Metabolic flux orders</h1>
                         <img class="thumbnail" src="/imgs/fluxorders.png" alt="Responsive image">
-                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/" target="_blank">Deploy</a></button>
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/fluxOrderDAG" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
                     </div>
                     <div class="grid_item" tabindex="0">
