--- a/blog-navigator.html
+++ b/blog-navigator.html
@@ -6,6 +6,6 @@
   <i class="fas fa-list-ul"></i>
 </a>
 
-<div href="#" id="right-blog-navigator-button" class="blog-navigator-button" onclick="goToNextPost(sense=1)">
+<div id="right-blog-navigator-button" class="blog-navigator-button" onclick="goToNextPost(sense=1)">
   <i class="fas fa-share"></i>
 </div>
