--- a/research.html
+++ b/research.html
@@ -31,7 +31,21 @@
 
         <div class="navbar-container" id="navbar"></div>
 
-        <h1>Coming soon...</h1>
+        <!-- <h1>Coming soon...</h1> -->
+
+        <div class="grid_container">
+
+          <div class="grid_item" tabindex="0">
+            <a class="entry_link" href="https://robaina.github.io/fluxOrders" target="_blank">
+              <div class="grid_item_content">
+                <h1 class="grid_item_title">The Flux Order Relation</h1>
+                <img class="thumbnail" src="imgs/FluxOrderRelation.png" alt="Responsive image">
+                <p class="content_preview">We present a new hierarchical organization of <i>E. coli</i>'s metabolic network which is based on the flux values that reactions take at steady state. We show that <sup>13</sup>C-derived fluxes, transcript and protein levels and enzyme k<sub>cat</sub> values are in agreement with the hierarchy.</p>
+              </div>
+            </a>
+          </div>
+
+        </div>
 
       </div>
 
