Added papers to research section

--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
 
   <div class="navbar-item" id="home" onclick="goToPage('/home')">Home</div>
 
-  <div class="navbar-item" id="about" onclick="goToPage('/about')">About</div>
+  <div class="navbar-item" id="about" onclick="goToPage('/about')">About me</div>
 
   <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div>
 
