single research section grid

--- a/research.html
+++ b/research.html
@@ -31,13 +31,9 @@
 
         <div class="navbar-container" id="navbar"></div>
 
-        <div class="grid-title">
-          <hr>
-          Submitted, not yet peer-reviewed
-          <hr>
-        </div>
 
         <div class="grid_container">
+
           <div class="grid_item" tabindex="0">
             <a class="entry_link" href="https://robaina.github.io/fluxOrders" target="_blank">
               <div class="grid_item_content">
@@ -45,20 +41,13 @@
                   <div class="grid_item_title">The Flux Order Relation</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2019)</div>
                 </div>
+                <div class="papertag preprint">Preprint</div>
                 <img class="thumbnail" src="imgs/FluxOrderRelation.png" alt="Responsive image">
                 <p class="content_preview">We present a new hierarchical organization of <i>Escherichia coli</i>'s metabolic network which is based on the flux values that reactions take at steady state. We show that <sup>13</sup>C-derived fluxes, transcript and protein levels and enzyme k<sub>cat</sub> values are in agreement with the hierarchy.</p>
               </div>
             </a>
           </div>
-        </div>
 
-        <div class="grid-title">
-          <hr>
-          Ongoing research
-          <hr>
-        </div>
-
-        <div class="grid_container">
           <div class="grid_item" tabindex="0">
             <a class="entry_link" href="https://github.com/Robaina/concentrationOrders" target="_blank">
               <div class="grid_item_content">
@@ -66,20 +55,27 @@
                   <div class="grid_item_title">Ordering of metabolite concentrations</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez (2019)</div>
                 </div>
+                <div class="papertag ongoing">Ongoing</div>
                 <img class="thumbnail" src="imgs/TFBApaper.png" alt="Responsive image">
                 <p class="content_preview">Experimental observation in <i>E. coli</i> has shown that the concentrations of certain metabolite pairs exhibit an ordering, i.e., one metabolite has always a higher concentration than another, when the system is at steady state. Here, I employ thermodynamic flux balance analysis to derive an ordering of metabolite concentrations in <i>Escherichia coli</i>.</p>
               </div>
             </a>
           </div>
-        </div>
 
-        <div class="grid-title">
-          <hr>
-          Published and peer-reviewed
-          <hr>
-        </div>
+          <div class="grid_item" tabindex="0">
+            <a class="entry_link" href="https://publishup.uni-potsdam.de/frontdoor/index/index/docId/40136" target="_blank">
+              <div class="grid_item_content">
+                <div class="grid_item_header">
+                  <div class="grid_item_title">My PhD thesis</div>
+                  <div class="grid_item_authors">Robaina-Est&eacute;vez (2017)</div>
+                </div>
+                <div class="papertag published">Published</div>
+                <img class="thumbnail" src="imgs/Thesis.png" alt="Responsive image">
+                <p class="content_preview">Cells regulate the activity through metabolic reactions in a context-specific way. The context-specificity of metabolism can be captured by several kinds of experimental data, such as by gene and protein expression or metabolite profiles. This thesis is composed of three individual studies focusing on context-specific experimental data integration into computational models of metabolism aiming at providing context-specific metabolic predictions.</p>
+              </div>
+            </a>
+          </div>
 
-        <div class="grid_container">
           <div class="grid_item" tabindex="0">
             <a class="entry_link" href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005568" target="_blank">
               <div class="grid_item_content">
@@ -87,8 +83,9 @@
                   <div class="grid_item_title">Alternative optima in context-specific metabolic models</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2017)</div>
                 </div>
+                <div class="papertag published">Published</div>
                 <img class="thumbnail" src="imgs/AOpaper.png" alt="Responsive image">
-                <p class="content_preview">Recent methodological developments have facilitated the integration of high-throughput data into genome-scale models to obtain context-specific metabolic reconstructions. A unique solution to this data integration problem often may not be guaranteed, leading to a multitude of context-specific predictions equally concordant with the integrated data.</p>
+                <p class="content_preview">Recent methodological developments have aimed at reconstructing context-specific metabolic models from high-throughput data. However, a unique reconstruction is often not guaranteed. Here, we explore this issue and propose possible solutions.</p>
               </div>
             </a>
           </div>
@@ -100,6 +97,7 @@
                   <div class="grid_item_title">Central metabolism of guard cells</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez et al. (2017)</div>
                 </div>
+                <div class="papertag published">Published</div>
                 <img class="thumbnail" src="imgs/GCpaper.png" alt="Responsive image">
                 <p class="content_preview">Photosynthesis and water use efficiency, key factors affecting plant growth, are directly controlled by the guard cells. Here, we used constraint-based modeling to predict the differences in metabolic fluxes between the mesophyll and guard cells of <i>Arabidopsis thaliana</i>. An independent <sup>13</sup>C-labeling experiment provides support for our predictions.</p>
               </div>
@@ -113,6 +111,7 @@
                   <div class="grid_item_title">Metabolic network constraints gene expression in Maize</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2016)</div>
                 </div>
+                <div class="papertag published">Published</div>
                 <img class="thumbnail" src="imgs/C4paper.png" alt="Responsive image">
                 <p class="content_preview">Existing experimental studies have indicated that the emergence of the C<sub>4</sub> photosynthesis requires co-ordination between several levels of cellular organization, from gene regulation to metabolism. Here, we utilize flux coupling analysis with maize metabolic models to investigate the correspondence between metabolic network structure and transcriptomic phenotypes along the maize leaf gradient.</p>
               </div>
@@ -126,6 +125,7 @@
                   <div class="grid_item_title">Context-specific metabolic model extraction with RegrEx</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2015)</div>
                 </div>
+                <div class="papertag published">Published</div>
                 <img class="thumbnail" src="imgs/RegrExpaper.png" alt="Responsive image">
                 <p class="content_preview">Context-specific metabolic models aim at describing metabolism under specific scenarios (e.g., cell types). Here, we introduce RegrEx, a fully automated method to reconstruct context-specific metabolic models that relies solely on context-specific data and ℓ<sub>1</sub>-norm regularization to extract a context-specific model.</p>
               </div>
@@ -136,24 +136,12 @@
             <a class="entry_link" href="https://www.frontiersin.org/articles/10.3389/fpls.2014.00491/full" target="_blank">
               <div class="grid_item_content">
                 <div class="grid_item_header">
-                  <div class="grid_item_title">Generalized framework for context-specific metabolic network extraction methods</div>
+                  <div class="grid_item_title">Framework for context-specific network extraction methods</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2014)</div>
                 </div>
+                <div class="papertag published">Published</div>
                 <img class="thumbnail" src="imgs/Frameworkpaper.png" alt="Responsive image">
                 <p class="content_preview">Several methods have been proposed to reconstruct context-specific models from existing genome-scale models by integrating various types of high-throughput data. Here we present a mathematical framework that puts all existing methods under one umbrella and provides the means to better understand their functioning, highlight similarities and differences, and to help users in selecting a most suitable method for an application.</p>
-              </div>
-            </a>
-          </div>
-
-          <div class="grid_item" tabindex="0">
-            <a class="entry_link" href="https://publishup.uni-potsdam.de/frontdoor/index/index/docId/40136" target="_blank">
-              <div class="grid_item_content">
-                <div class="grid_item_header">
-                  <div class="grid_item_title">My PhD thesis</div>
-                  <div class="grid_item_authors">Robaina-Est&eacute;vez (2017)</div>
-                </div>
-                <img class="thumbnail" src="imgs/Thesis.png" alt="Responsive image">
-                <p class="content_preview">Cells regulate the activity through metabolic reactions in a context-specific way. The context-specificity of metabolism can be captured by several kinds of experimental data, such as by gene and protein expression or metabolite profiles. This thesis is composed of three individual studies focusing on context-specific experimental data integration into computational models of metabolism aiming at providing context-specific metabolic predictions.</p>
               </div>
             </a>
           </div>
