--- a/apps.html
+++ b/apps.html
@@ -35,7 +35,7 @@
         <div id="page-container">
             <div id="content-wrap">
 
-            <div class="navbar-container" id="navbar"></div>
+                <div class="navbar-container" id="navbar"></div>
 
                 <div class="intro">
                     These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
@@ -43,48 +43,56 @@
 
 
                 <div class="grid_container">
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">The Pentagram of Venus</h1>
                         <img class="thumbnail" src="/imgs/pentagram.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Sudoku solver</h1>
                         <img class="thumbnail" src="/imgs/sudoku.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
-                        <h1 class="grid_item_title">Metabolic flux orders</h1>
+                        <h1 class="grid_item_title">Metabolic flux ordering</h1>
                         <img class="thumbnail" src="/imgs/fluxorders.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/fluxOrderDAG" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Ayumu's game</h1>
                         <img class="thumbnail" src="/imgs/ayumu.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Simon game</h1>
                         <img class="thumbnail" src="/imgs/simon.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Colorful N-Mobius</h1>
                         <img class="thumbnail" src="/imgs/mobiusart.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
                         <img class="thumbnail" src="/imgs/oblatespheroidal.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
                     </div>
+
                     <div class="grid_item" tabindex="0">
                         <h1 class="grid_item_title">Function plotter</h1>
                         <img class="thumbnail" src="/imgs/functionplotter.png" alt="Responsive image">
