--- a/research.html
+++ b/research.html
@@ -31,6 +31,10 @@
 
         <div class="navbar-container" id="navbar"></div>
 
+        <div class="intro">
+            Here are the research projects in which I've worked sorted by year. Projects tagged as <em>published</em> have been peer-reviewed and published while <em>preprints</em> are published but pending peer-review. I will also include some of the projects in which I'm currently working on &mdash;tagged as <em>ongoing</em>.
+        </div>
+
 
         <div class="grid_container">
 
