--- a/navbar.html
+++ b/navbar.html
@@ -20,8 +20,8 @@
 
   <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div>
 
-  <!-- <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div> -->
-  <div class="navbar-item" id="blog">Blog</div>
+  <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div>
+  <!-- <div class="navbar-item" id="blog">Blog</div> -->
 
   <div class="navbar-item" id="webapps" onclick="goToPage('/apps')">Apps</div>
 
