--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
     <script src="/js/transitions.js"></script>
     <script src="/js/settings.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="vendor/jquery-3.4.1.min.js"></script></script>
     <script>
       $(function() {
         $("#navbar").load("/navbar.html");
@@ -32,7 +32,7 @@
         <div class="navbar-container" id="navbar"></div>
 
         <div class="intro">
-            Here are the research projects in which I've worked sorted by year. Projects tagged as <em>published</em> have been peer-reviewed and published while <em>preprints</em> are published but pending peer-review. I will also include some of the projects in which I'm currently working on &mdash;tagged as <em>ongoing</em>.
+            Here are mt research projects sorted by year. Projects tagged as <em>published</em> have been peer-reviewed and published while <em>preprints</em> are published but pending peer-review. I will also include some of the projects in which I'm currently working on &mdash;tagged as <em>ongoing</em>.
         </div>
 
 
