--- a/assets/blog-page-template.html
+++ b/assets/blog-page-template.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/blog_page_template.css">
     <script src="https://kit.fontawesome.com/b74ab0dc19.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/vendor/jquery-3.4.1.min.js"></script></script>
     <script src="/js/transitions.js"></script>
     <script src="/js/settings.js"></script>
     <script src="/js/blog-entry.js"></script>
