--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
         <script src="/js/transitions.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="vendor/jquery-3.4.1.min.js"></script></script>
         <script>
             $(function() {
                 $("#navbar").load("/navbar.html");
