Dynamically update blog section

--- a/apps.html
+++ b/apps.html
@@ -42,60 +42,60 @@
                 </div>
 
 
-                <div class="grid_container">
+                <div id="grid_container">
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">The Pentagram of Venus</div>
-                        <img class="thumbnail" src="/imgs/pentagram.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/pentagram.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Sudoku solver</div>
-                        <img class="thumbnail" src="/imgs/sudoku.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/sudoku.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Metabolic flux ordering</div>
-                        <img class="thumbnail" src="/imgs/fluxorders.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/fluxorders.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/fluxOrderDAG" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Ayumu's game</div>
-                        <img class="thumbnail" src="/imgs/ayumu.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/ayumu.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Simon game</div>
-                        <img class="thumbnail" src="/imgs/simon.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/simon.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Colorful N-Mobius</div>
-                        <img class="thumbnail" src="/imgs/mobiusart.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/mobiusart.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Oblate Spheroidal Coordinates</div>
-                        <img class="thumbnail" src="/imgs/oblatespheroidal.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/oblatespheroidal.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
                     </div>
 
                     <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">Function plotter</div>
-                        <img class="thumbnail" src="/imgs/functionplotter.png" alt="Responsive image">
+                        <img class="thumbnail" src="/imgs/apps/functionplotter.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
                     </div>
