--- a/apps.html
+++ b/apps.html
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="grid_item" tabindex="0">
-                        <div class="grid_item_title">Oblate Spheroidal Coordinates</div>
+                        <div class="grid_item_title">Oblate Spheroidal</div>
                         <img class="thumbnail" src="/imgs/apps/oblatespheroidal.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
