page intro across pages

--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
 
         <div class="navbar-container" id="navbar"></div>
 
-        <div class="intro">
+        <div class="page-intro">
             Here are my research projects sorted by year. Projects tagged as <em>published</em> have been peer-reviewed and published while <em>preprints</em> are published but pending peer-review. I will also include some of the projects in which I'm currently working on &mdash; tagged as <em>ongoing</em>.
         </div>
 
