--- a/apps.html
+++ b/apps.html
@@ -37,7 +37,7 @@
 
                 <div class="navbar-container" id="navbar"></div>
 
-                <div class="intro">
+                <div class="page-intro">
                     These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
                 </div>
 
