some refactoring, changing background of navbar upon scrolling

--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
     <script src="vendor/jquery-3.4.1.min.js"></script></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar-container").load("/navbar.html");
       });
       $(function() {
         $("#footer").load("/credits.html");
@@ -29,7 +29,7 @@
     <div id="page-container">
       <div id="content-wrap">
 
-        <div class="navbar-container" id="navbar"></div>
+        <div id="navbar-container"></div>
 
         <div class="page-intro">
             Here are my research projects sorted by year. Projects tagged as <em>published</em> have been peer-reviewed and published while <em>preprints</em> are published but pending peer-review. I will also include some of the projects in which I'm currently working on &mdash; tagged as <em>ongoing</em>.
