--- a/apps.html
+++ b/apps.html
@@ -19,7 +19,7 @@
         <script src="vendor/jquery-3.4.1.min.js"></script></script>
         <script>
             $(function() {
-                $("#navbar").load("/navbar.html");
+                $("#navbar-container").load("/navbar.html");
             });
             $(function() {
                 $("#footer").load("/credits.html");
@@ -35,7 +35,7 @@
         <div id="page-container">
             <div id="content-wrap">
 
-                <div class="navbar-container" id="navbar"></div>
+                <div id="navbar-container"></div>
 
                 <div class="page-intro">
                     These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS3 and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
