--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <script src="/js/transitions.js"></script>
     <script>
       $(function() {
-        $("#navbar").load("/navbar.html");
+        $("#navbar-container").load("/navbar.html");
       });
       $(function() {
         $("#footer").load("/credits.html");
@@ -29,7 +29,7 @@
     <div id="page-container">
       <div id="content-wrap">
 
-        <div class="navbar-container" id="navbar"></div>
+        <div id="navbar-container"></div>
 
         <div class="contact-info">
           <p>Got any questions?</p>
