--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <script src="vendor/jquery-3.4.1.min.js"></script></script>
         <script>
             $(function() {
-                $("#navbar").load("/navbar.html");
+                $("#navbar-container").load("/navbar.html");
             });
             $(function() {
                 $("#footer").load("/credits.html");
@@ -35,7 +35,7 @@
         <div id="page-container">
             <div id="content-wrap">
 
-            <div class="navbar-container" id="navbar"></div>
+            <div id="navbar-container"></div>
 
                 <div class="info">
                     <div class="myname">
