--- a/assets/blog-page-template.html
+++ b/assets/blog-page-template.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="/css/blog.css">
     <link rel="stylesheet" href="/css/blog_page_template.css">
     <link rel="stylesheet" href="/vendor/fontawesome_all.min.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
+
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+          processEscapes: true
+        }
+      });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=default" async></script>
 
     <script src="/vendor/jquery-3.4.1.min.js"></script>
     <script>
@@ -52,7 +61,10 @@
 
           <article class="blog-content">
 
-            <p></p>
+            <p>Ok, so this is the actual blog. Let's see if MathJax works now:
+               $$f(x) = \sum_{n=0}^{\inf} x^n.$$
+               The previous was a display formula, an example of an inline formula is this: $\log{x} + x^2 = k$.
+             </p>
 
           </article>
 
