--- a/credits.html
+++ b/credits.html
@@ -1,6 +1,17 @@
+<!-- My name and link -->
 <a href="https://github.com/Robaina/Robaina.github.io" target="_blank">
   <div id="footer-content">
     <div class="footer-code-symbol"> <</div> <div class="footer-code-symbol">/> </div>
     <div>by Semidán Robaina Estévez, 2019</div>
   </div>
 </a>
+
+<!-- Creative commons -->
+<!-- <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. -->
+
+<!-- My mail and Twitter -->
+
+```python
+def f(x):
+    return 2 * x
+```
