--- a/credits.html
+++ b/credits.html
@@ -1,17 +1,13 @@
-<!-- My name and link -->
-<a href="https://github.com/Robaina/Robaina.github.io" target="_blank">
-  <div id="footer-content">
-    <div class="footer-code-symbol"> <</div> <div class="footer-code-symbol">/> </div>
-    <div>by Semidán Robaina Estévez, 2019</div>
-  </div>
-</a>
+<div id="footer-content">
 
-<!-- Creative commons -->
-<span id="cc-license">
-  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
-</span>
+  <a href="https://github.com/Robaina/Robaina.github.io" target="_blank">
+    <span id="code-symbol">
+      <div class="footer-code-symbol"> <</div>
+      <div class="footer-code-symbol">/> </div>
+    </span>
+    <div id="myname">by Semidán Robaina Estévez, 2019</div>
+  </a>
+  <!-- Creative commons -->
+  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img id="cc-license" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
 
-
-<!-- <br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. -->
-
-<!-- My mail and Twitter -->
+</div>
