refactoring, added logo to navbar

--- a/apps.html
+++ b/apps.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Semidán: Apps</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
         <link rel="stylesheet" href="/css/master.css">
       <link rel="stylesheet" href="/css/apps.css">
         <script src="/js/transitions.js"></script>
@@ -25,7 +25,7 @@
                 $("#footer").load("/credits.html");
             });
             let logo = new Image();
-            logo.src = "/imgs/logo1.png";
+            logo.src = "/imgs/my-logo.png";
         </script>
 
     </head>
