--- a/credits.html
+++ b/credits.html
@@ -8,6 +8,6 @@
     <div id="myname">by Semidán Robaina Estévez, 2019</div>
   </a>
   <!-- Creative commons -->
-  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img id="cc-license" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img id="cc-license" alt="Creative Commons License" src="/imgs/cc-by.png" /></a>
 
 </div>
