--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Semidán's site</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
 		<link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/index.css">
 
@@ -49,7 +49,7 @@
 
 	<body>
 
-    <img id="mylogo" src="/imgs/logo1.png" alt="Responsive image">
+    <img id="mylogo" src="/imgs/my-logo.png" alt="Responsive image">
 
   </body>
 </html>
