--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Research</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
     <script src="/js/transitions.js"></script>
@@ -20,7 +20,7 @@
         $("#footer").load("/credits.html");
       });
       let logo = new Image();
-      logo.src = "/imgs/logo1.png";
+      logo.src = "/imgs/my-logo.png";
     </script>
 
   </head>
