--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: About</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/about.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
@@ -20,7 +20,7 @@
         $("#footer").load("/credits.html");
       });
       let logo = new Image();
-      logo.src = "/imgs/logo1.png";
+      logo.src = "/imgs/my-logo.png";
     </script>
 
   </head>
