--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Semidán: Home</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
         <link rel="stylesheet" href="/css/master.css">
         <link rel="stylesheet" href="/css/home.css">
         <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
@@ -24,7 +24,7 @@
                 $("#footer").load("/credits.html");
             });
             let logo = new Image();
-            logo.src = "/imgs/logo1.png";
+            logo.src = "/imgs/my-logo.png";
         </script>
 
     </head>
