--- a/navbar.html
+++ b/navbar.html
@@ -39,3 +39,7 @@
   <div class="settings-item" id="dark-mode" onclick="selectDarkMode()">Dark mode</div>
 
 </div>
+
+<div id="my-logo-container">
+  <img src="/imgs/my-logo.png" alt="my logo" id="my-logo">
+</div>
