--- a/navbar.html
+++ b/navbar.html
@@ -20,8 +20,8 @@
 
   <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div>
 
-  <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div>
-  <!-- <div class="navbar-item" id="blog">Blog</div> -->
+  <!-- <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div> -->
+  <div class="navbar-item" id="blog">Blog</div>
 
   <div class="navbar-item" id="webapps" onclick="goToPage('/apps')">Apps</div>
 
@@ -40,6 +40,6 @@
 
 </div>
 
-<div id="my-logo-container">
+<!-- <div id="my-logo-container">
   <img src="/imgs/my-logo.png" alt="my logo" id="my-logo">
-</div>
+</div> -->
