blog posts written in markdown and automatically converted to html

--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
                   <div class="grid_item_title">The Flux Order Relation</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2019)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Preprint"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/FluxOrderRelation.png" alt="Responsive image">
@@ -61,7 +61,7 @@
                   <div class="grid_item_title">Ordering of metabolite concentrations</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez (2019)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Ongoing"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/TFBApaper.png" alt="Responsive image">
@@ -77,7 +77,7 @@
                   <div class="grid_item_title">My PhD thesis</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez (2017)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/Thesis.png" alt="Responsive image">
@@ -93,7 +93,7 @@
                   <div class="grid_item_title">Alternative optima in context-specific metabolic models</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2017)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/AOpaper.png" alt="Responsive image">
@@ -109,7 +109,7 @@
                   <div class="grid_item_title">Central metabolism of guard cells</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez et al. (2017)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/GCpaper.png" alt="Responsive image">
@@ -125,7 +125,7 @@
                   <div class="grid_item_title">Metabolic network constraints gene expression in Maize</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2016)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/C4paper.png" alt="Responsive image">
@@ -141,7 +141,7 @@
                   <div class="grid_item_title">Context-specific metabolic model extraction with RegrEx</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2015)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/RegrExpaper.png" alt="Responsive image">
@@ -157,7 +157,7 @@
                   <div class="grid_item_title">Framework for context-specific network extraction methods</div>
                   <div class="grid_item_authors">Robaina-Est&eacute;vez & Nikoloski (2014)</div>
                 </div>
-                <div class="tag-container">
+                <div id="tag-container">
                   <div class="topictag Published"></div>
                 </div>
                 <img class="thumbnail" src="imgs/research/Frameworkpaper.png" alt="Responsive image">
