removed logo from transitions

--- a/navbar.html
+++ b/navbar.html
@@ -15,17 +15,22 @@
 <div id="navbar">
 
   <div class="navbar-item" id="home" onclick="goToPage('/home')">Home</div>
+  <!-- <a class="navbar-item" id="home" href="/home">Home</a> -->
 
   <div class="navbar-item" id="about" onclick="goToPage('/about')">About me</div>
+  <!-- <a class="navbar-item" id="about" href="/about">About me</a> -->
 
   <div class="navbar-item" id="research" onclick="goToPage('/research')">Research</div>
+  <!-- <a class="navbar-item" id="research" href="/research">Research</a> -->
 
   <div class="navbar-item" id="blog" onclick="goToPage('/blog')">Blog</div>
-  <!-- <div class="navbar-item" id="blog">Blog</div> -->
+  <!-- <a class="navbar-item" id="blog" href="/blog">Blog</a> -->
 
   <div class="navbar-item" id="webapps" onclick="goToPage('/apps')">Apps</div>
+  <!-- <a class="navbar-item" id="webapps" href="/apps">Apps</a> -->
 
   <div class="navbar-item" id="contact" onclick="goToPage('/contact')">Contact</div>
+  <!-- <a class="navbar-item" id="contact" href="/contact">Contact</a> -->
 
 </div>
 
