some updates to meta

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Personal webpage of Semidan Robaina Estevez">
+        <meta name="description" content="Personal webpage of Semidán Robaina Estévez">
         <meta name="keywords" content="web development, science">
         <meta name="author" content="Semidan Robaina Estevez">
         <meta name="viewport" content="width=device-width, initial-scale=1">
