--- a/research.html
+++ b/research.html
@@ -4,6 +4,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Personal webpage of Semidán Robaina Estévez">
+    <meta name="keywords" content="research, science, computational biology, optimization, metabolism">
     <title>Semidán: Research</title>
     <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
     <link rel="stylesheet" href="/css/master.css">
