--- a/apps.html
+++ b/apps.html
@@ -4,15 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Personal webpage of Semidan Robaina Estevez">
-      <meta name="keywords" content="web development, science">
-      <meta name="author" content="Semidan Robaina Estevez">
+        <meta name="description" content="Personal webpage of Semidán Robaina Estévez">
+        <meta name="keywords" content="web development, apps, JavaScript, HTML, CSS">
+        <meta name="author" content="Semidan Robaina Estevez">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Semidán: Apps</title>
         <link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/my-logo.png">
         <link rel="stylesheet" href="/css/master.css">
-      <link rel="stylesheet" href="/css/apps.css">
+        <link rel="stylesheet" href="/css/apps.css">
         <script src="/js/transitions.js"></script>
         <script src="/js/settings.js"></script>
 
