--- a/home.html
+++ b/home.html
@@ -70,7 +70,8 @@
                     </div>
 
                     <div class="myrol">
-                        Researcher, developer, writer
+                        <!-- researcher, developer, writer -->
+                        scientist, programmer, explorer
                     </div>
                 </div>
 
