rols change on hover

--- a/home.html
+++ b/home.html
@@ -69,9 +69,10 @@
                         </div>
                     </div>
 
-                    <div class="myrol">
-                        <!-- researcher, developer, writer -->
-                        scientist, programmer, explorer
+                    <div id="myrol-container">
+                        <div class="rol-keyword" onmouseover="changeRolKeyword()">scientist</div>,
+                        <div class="rol-keyword" onmouseover="changeRolKeyword()">programmer</div>,
+                        <div class="rol-keyword" onmouseover="changeRolKeyword()">explorer</div>
                     </div>
                 </div>
 
@@ -81,7 +82,7 @@
 
         </div>
 
-    <script src="/js/artwork.js"></script>
+    <script src="/js/home-artwork.js"></script>
         <script src="/js/settings.js"></script>
 
   </body>
