rol change on hover, simple str

--- a/home.html
+++ b/home.html
@@ -69,11 +69,10 @@
                         </div>
                     </div>
 
-                    <div id="myrol-container">
-                        <div class="rol-keyword" onmouseover="changeRolKeyword()">scientist</div>,
-                        <div class="rol-keyword" onmouseover="changeRolKeyword()">programmer</div>,
-                        <div class="rol-keyword" onmouseover="changeRolKeyword()">explorer</div>
+                    <div id="myrol-container" onmouseover="changeRolKeywords()">
+                      scientist, programmer, explorer
                     </div>
+
                 </div>
 
             </div>
