added contact info to footer

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         $("#navbar-container").load("/navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("/footer.html");
       });
       let logo = new Image();
       logo.src = "/imgs/my-logo.png";
@@ -39,7 +39,7 @@
 
           <div id="my-photo-container"><img id="my-photo" src="/imgs/me.png" alt="Responsive image"></div>
 
-          <p>welcome to my site! I'm an inquisitive, sentient being, born and raised in the <a href="https://en.wikipedia.org/wiki/Canary_Islands" target="_blank">Canary Islands</a>, Spain (great place). I've always been passionate about science because it gives us the power to truly understand Nature. I have chosen research as my main career and have a Ph.D. degree in Systems Biology.</p>
+          <p>welcome to my site! I'm an inquisitive, sentient being, born and raised in the <a href="https://en.wikipedia.org/wiki/Canary_Islands" target="_blank">Canary Islands</a>, Spain (great place). I've always been passionate about science because it gives us the power to understand Nature. I have chosen research as my main career and have a Ph.D. degree in Systems Biology.</p>
 
           <p>I have also developed a strong interest in programming. I'm a fan of Python, which I use in my scientific studies, and of JavaScript (and HTML5 and CSS3), which has tremendous potential for creativity in the web! I'm also an advocate of <a href="https://www.fosteropenscience.eu/content/what-open-science-introduction">open science</a> and open source software &mdash; particularly when used to make science. I believe that this is the only way to do transparent, fair science which is accessible to anyone.</p>
 
