--- a/apps.html
+++ b/apps.html
@@ -22,7 +22,7 @@
                 $("#navbar-container").load("/navbar.html");
             });
             $(function() {
-                $("#footer").load("/credits.html");
+                $("#footer").load("/footer.html");
             });
             let logo = new Image();
             logo.src = "/imgs/my-logo.png";
