--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         $("#navbar-container").load("/navbar.html");
       });
       $(function() {
-        $("#footer").load("/credits.html");
+        $("#footer").load("/footer.html");
       });
       let logo = new Image();
       logo.src = "/imgs/my-logo.png";
