--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 $("#navbar-container").load("/navbar.html");
             });
             $(function() {
-                $("#footer").load("/credits.html");
+                $("#footer").load("/footer.html");
             });
             let logo = new Image();
             logo.src = "/imgs/my-logo.png";
