fixes to navbar, scroll arrow

--- a/apps.html
+++ b/apps.html
@@ -107,5 +107,8 @@
         <footer id="footer"></footer>
         </div>
 
+        <script src="/js/scrollToTop.js"></script>
+        <div id="return-to-start-arrow"  onclick="scrollToTop()"></div>
+
     </body>
 </html>
