--- a/research.html
+++ b/research.html
@@ -177,5 +177,9 @@
     <script>
       setTopicTag();
     </script>
+
+    <div id="return-to-start-arrow"  onclick="scrollToTop()"></div>
+    <script src="/js/scrollToTop.js"></script>
+
   </body>
 </html>
