update on python script

--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
         <div class="footer-code-symbol"> <</div>
         <div class="footer-code-symbol">/> </div>
       </span>
-      <div id="myname">by Semidán Robaina Estévez, 2019</div>
+      <div id="my-name-in-footer">by Semidán Robaina Estévez, 2019</div>
     </a>
     <!-- Creative commons -->
     <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img id="cc-license" alt="Creative Commons License" src="/imgs/cc-by.png" /></a>
