--- a/home.html
+++ b/home.html
@@ -35,10 +35,14 @@
             <div id="content-wrap">
 
             <div id="navbar-container"></div>
+            <!-- <div id="settings-message">
+              Too dark?
+              Try light mode.
+            </div> -->
 
-                <div class="info">
-                    <div class="myname">
-                <div class="name-wrapper" id="name">
+                <div id="info">
+                    <div id="myname">
+                        <div class="name-wrapper" id="name">
                             <div class="name-character">S</div>
                             <div class="name-character">e</div>
                             <div class="name-character">m</div>
@@ -56,9 +60,9 @@
                             <div class="name-character">i</div>
                             <div class="name-character">n</div>
                             <div class="name-character">a</div>
-                </div>
+                        </div>
 
-                <div class="name-wrapper" id="surname2">
+                        <div class="name-wrapper" id="surname2">
                             <div class="name-character">E</div>
                             <div class="name-character">s</div>
                             <div class="name-character">t</div>
