some adjustments to footer and navbar

--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
   <div class="burguer-bracket">[</div>
 
   <div id="burguer-meat-container">
-    <div class="nav-burguer-meat"></div>
+    <div id="top-meat" class="nav-burguer-meat"></div>
     <div class="nav-burguer-meat"></div>
     <div class="nav-burguer-meat"></div>
   </div>
