smaller footer text

--- a/navbar.html
+++ b/navbar.html
@@ -45,6 +45,6 @@
 
 </div>
 
-<!-- <div id="my-logo-container">
+<div id="my-logo-container">
   <img src="/imgs/my-logo.png" alt="my logo" id="my-logo">
-</div> -->
+</div>
