--- a/apps.html
+++ b/apps.html
@@ -45,6 +45,13 @@
                 <div id="grid_container">
 
                     <div class="grid_item" tabindex="0">
+                        <div class="grid_item_title">Square Spiral</div>
+                        <img class="thumbnail" src="/imgs/apps/squares.png" alt="Responsive image">
+                        <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SquareSpiral/" target="_blank">Deploy</a></button>
+                        <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SquareSpiral" target="_blank">Code</a></button>
+                    </div>
+
+                    <div class="grid_item" tabindex="0">
                         <div class="grid_item_title">The Pentagram of Venus</div>
                         <img class="thumbnail" src="/imgs/apps/pentagram.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
