--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,23 @@
         <div class="contact-info">
           <p>Got any questions?</p>
 
-          <div class="contact-logo-container">
-            <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="contact-logo" id="mail-logo" src="/imgs/email.png" alt="image"></a>
-            <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github-logo" src="#" alt="image"></a>
-            <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="twitter-logo" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
+          <div class="logos-container">
+            <div class="contact-logo-container">
+              <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="contact-logo" id="mail-logo" src="/imgs/email.png" alt="image"></a>
+            </div>
+
+            <div class="contact-logo-container">
+              <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github-logo" src="#" alt="image"></a>
+            </div>
+
+            <div class="contact-logo-container">
+             <a href="https://www.linkedin.com/in/semidan-robaina" target="_blank"><img class="contact-logo" id="linkedin-logo" src="/imgs/linkedin.png" alt="image"></a>
+            </div>
+
+            <div class="contact-logo-container">
+             <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="twitter-logo" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
+            </div>
+
           </div>
 
         </div>
